--- a/WebInmobiliaria/Paginas/Login.html
+++ b/WebInmobiliaria/Paginas/Login.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inicio App dllo WEB</title>
+    <title>Inmobiliaria Login</title>
 
     <!-- Google Font: Source Sans Pro -->
     <!-- Font Awesome -->
     <link href="Estilos/css/all.min.css" rel="stylesheet" />
     <!-- Theme style -->
     <link href="Estilos/adminlte.min.css" rel="stylesheet" />
+    <!-- Stylesheet Page-->
+    <link href="Estilos/Stylesheet/Login.css" rel="stylesheet" />
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
-        <div class="login-logo">
-            <h1>APLICACIÓN</h1>
-        </div>
-        <!-- /.login-logo -->
-        <div class="card">
+       
+        <div class="card anim-card">
+            <div class="login-logo">
+                <img src="../wwwroot/pages/images/minimalLogo.png" />
+            </div>
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Ingresa usuario clave para iniciar</p>
-
                 <form>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3 anim-field">
                         <input type="text" id="txtUsuario" class="form-control" placeholder="Usuario" autocomplete="current-password" required>
                         <div class="input-group-append">
                             <div class="input-group-text">
@@ -30,7 +30,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3 anim-field">
                         <input type="password" id="txtClave" class="form-control" placeholder="Clave" autocomplete="current-password" required>
                         <div class="input-group-append">
                             <div class="input-group-text">
@@ -38,9 +38,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row anim-field">
                         <div class="col-12">
                             <button type="button" class="btn btn-primary btn-block" onclick="Ingresar()">INGRESAR</button>
+
                         </div>
                     </div>
                 </form>
