--- a/WebInmobiliaria/Paginas/Cliente/LandPage.html
+++ b/WebInmobiliaria/Paginas/Cliente/LandPage.html
@@ -21,7 +21,7 @@
             <div class="landpage-hero-content">
                 <h1>Tu nuevo hogar te espera</h1>
                 <p>Encuentra la propiedad ideal para ti y tu familia con la mejor asesoría inmobiliaria.</p>
-                <a href="#" class="btn-hero">Buscar Viviendas</a>
+                <a href="InmueblesCatalogo.html" class="btn-hero">Buscar Viviendas</a>
             </div>
             <img src="../../wwwroot/pages/images/imagen de prueba.png" />
         </div>
@@ -29,11 +29,7 @@
     </div>
     <script src="../../Scripts/jquery-3.4.1.min.js"></script>
     <script src="../../Scripts/bootstrap.bundle.min.js"></script>
-    <script>
-        $(function () {
-            $("#dvMenu").load("Menu-Landpage.html");
-        });
-    </script>
+    <script src="../Scripts/Cliente/MenuCliente.js"></script>
 </body>
 
 </html>
