--- a/WebInmobiliaria/Paginas/Empleado/Login.html
+++ b/WebInmobiliaria/Paginas/Empleado/Login.html
@@ -7,18 +7,18 @@
 
     <!-- Google Font: Source Sans Pro -->
     <!-- Font Awesome -->
-    <link href="Estilos/css/all.min.css" rel="stylesheet" />
+    <link href="../Estilos/css/all.min.css" rel="stylesheet" />
     <!-- Theme style -->
-    <link href="Estilos/adminlte.min.css" rel="stylesheet" />
+    <link href="../Estilos/adminlte.min.css" rel="stylesheet" />
     <!-- Stylesheet Page-->
-    <link href="Estilos/Stylesheet/Login.css" rel="stylesheet" />
+    <link href="../Estilos/Stylesheet/Login.css" rel="stylesheet" />
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
-       
+
         <div class="card anim-card">
             <div class="login-logo">
-                <img src="../wwwroot/pages/images/minimalLogo.png" />
+                <img src="../../wwwroot/pages/images/minimalLogo.png" />
             </div>
             <div class="card-body login-card-body">
                 <form>
@@ -53,9 +53,9 @@
         </div>
     </div>
     <!-- /.login-box -->
-    <script src="../Scripts/jquery-3.4.1.min.js"></script>
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="Scripts/Comunes/CRUD.js"></script>
-    <script src="Scripts/Login.js"></script>
+    <script src="../../Scripts/jquery-3.4.1.min.js"></script>
+    <script src="../../Scripts/bootstrap.bundle.min.js"></script>
+    <script src="../Scripts/Comunes/CRUD.js"></script>
+    <script src="../Scripts/Login.js"></script>
 </body>
 </html>
