--- a/WebInmobiliaria/Paginas/Empleado/MenuEmpleado.html
+++ b/WebInmobiliaria/Paginas/Empleado/MenuEmpleado.html
@@ -1,7 +1,9 @@
 ﻿<nav class="navbar navbar-expand-lg">
+
     <a class="navbar-brand" href="#">
-        <img src="/wwwroot/pages/images/extendedLogo.png" />
+        <img src="../../wwwroot/pages/images/extendedLogo.png" />
     </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,23 +11,25 @@
     <div class="collapse navbar-collapse" data-toggle="collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="dropdown-item" href="LandPage.html">Inicio</a>
+                <a class="dropdown-item" href="IndexEmpleado.html">Inicio</a>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="dropdown-item" href="InmueblesCatalogo.html">Catalogo</a>
+                <a class="dropdown-item" href="GestionTransaccion.html">Transacción</a>
 
             </li>
             <li class="nav-item dropdown">
-                <a class="dropdown-item" href="Nosotros.html">Nosotros</a>
-
+                <a class="dropdown-item" href="GestionVisita.html">Visitas</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="dropdown-item" href="Contacto.html">Contacto</a>
+                <a class="dropdown-item" href="GestionInmuebles.html">Inmuebles</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="dropdown-item" href="GestionEmpleado.html">Empleados</a>
             </li>
         </ul>
-        <div >
-            <a class="btn-navbar" href="../Empleado/Login.html">Iniciar Sesión</a>
+        <div>
+            <a class="btn-navbar" href="../Cliente/LandPage.html">Cerrar sesión</a>
         </div>
     </div>
 </nav>
