--- a/WebInmobiliaria/Paginas/Empleado/Login.html
+++ b/WebInmobiliaria/Paginas/Empleado/Login.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="row anim-field">
                         <div class="col-12">
-                            <button type="button" class="btn btn-primary btn-block" onclick="Ingresar()">INGRESAR</button>
+                            <button type="button" class="btn btn-primary btn-block" onclick="Ingresar();">INGRESAR</button>
 
                         </div>
                     </div>
