--- a/WebInmobiliaria/Paginas/Empleado/GestionTransaccion.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionTransaccion.html
@@ -88,7 +88,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="txtPrecio">PRECIO ACORDADO</label>
-                                            <input type="number" class="form-control" id="txtPrecio" placeholder="Valor Acordado">
+                                            <input type="number" class="form-control" id="txtPrecio" placeholder="Precio acordado">
                                         </div>
                                     </div>
                                     <div class="col-md-3">
@@ -99,12 +99,102 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="txtDescripcion">NOTAS</label>
-                                            <textarea class="form-control" id="txtDescripcion" rows="2" placeholder="Ingrese una descripción detallada"></textarea>
+                                            <textarea class="form-control" id="txtDescripcion" rows="1" placeholder="Ingrese una descripción detallada"></textarea>
                                         </div>
                                     </div>
+
+                                    <!--Editar Medios de pago-->
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+
+                                            <label></label>
+                                            <button type="button" id="btnFormaPago" class="btn-block btn-lg btn-primary" data-toggle="modal" data-target="#modFormaPago" onclick="LlenarTablaFormaPago()">EDITAR FORMA DE PAGO</button>
+
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="modFormaPago" tabindex="-1" role="dialog" aria-labelledby="modFormaPagoLabel" aria-hidden="true">
+                                                <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="modFormaPagoLabel">GESTIÓN FORMAS DE PAGO</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="LlenarTablaTransaccion()">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+
+                                                        <div class="modal-body">
+
+                                                            <div class="row">
+
+                                                                <div class="col-md-6">
+                                                                    <div class="form-group">
+                                                                        <label for="cboTipoPago">MEDIO DE PAGO</label>
+                                                                        <select id="cboTipoPago" class="form-control select2" style="width: 100%;">
+                                                                            <option selected="selected" value="0">Seleccione el tipo de pago</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-6">
+                                                                    <div class="form-group">
+                                                                        <label for="txtValor">VALOR A PAGAR</label>
+                                                                        <input type="text" class="form-control" id="txtValor" placeholder="Valor a pagar">
+                                                                    </div>
+                                                                </div>
+
+                                                            </div>
+
+                                                            <div class="row">
+
+                                                                <div class="col-md-3">
+                                                                    <div class="form-group">
+                                                                        <button id="bntInsertarMedioP" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('POST', 'Insertar')">INSERTAR</button>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-3">
+                                                                    <div class="form-group">
+                                                                        <button id="btnActualizarMedioP" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('PUT', 'Actualizar')">ACTUALIZAR</button>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-3">
+                                                                    <div class="form-group">
+                                                                        <button id="btnEliminarMedioP" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('DELETE', 'Eliminar')">ELIMINAR</button>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-md-3">
+                                                                    <div class="form-group">
+                                                                        <button id="btnCerrarModal" class="btn-block btn-lg btn-secondary" data-dismiss="modal" onclick="LlenarTablaClientes()">CERRAR</button>
+                                                                    </div>
+                                                                </div>
+
+                                                            </div>
+
+                                                            <div class="row">
+                                                                <div class="col-md-12">
+                                                                    <table id="tblFormaPago" class="table table-bordered table-striped">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>Editar</th>
+                                                                                <th>Medio de pago</th>
+                                                                                <th>Valor</th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                    </table>
+                                                                </div>
+                                                            </div>
+
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <div id="dvMensajeTel" class=""></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
 
                                 <!--TABLA ARRIENDO-->
@@ -152,13 +242,15 @@
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label for="txtPago">MONTO A PAGAR</label>
-                                                    <input type="number" class="form-control" id="txtPago">
+                                                    <input type="number" class="form-control" id="txtPago" readonly>
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
-                                                    <label for="txtEstadoPago">ESTADO DE PAGO</label>
-                                                    <input type="text" class="form-control" id="txtEstadoPago">
+                                                    <label for="cboEstadoPago">ESTADO DE PAGO</label>
+                                                    <select id="cboEstadoPago" class="form-control select2" style="width: 100%;">
+                                                        <option selected="selected" value="0">Seleccione estado de pago</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -183,68 +275,10 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <button id="btnEliminar" class="btn-block btn-lg btn-primary">CONSULTAR</button>
+                                            <button id="btnConsultar" class="btn-block btn-lg btn-primary">CONSULTAR</button>
                                         </div>
                                     </div>
-                                </div>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="modTelefonos" tabindex="-1" role="dialog" aria-labelledby="modTelefonosLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="modTelefonosLabel">GESTIÓN DE TELÉFONOS</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="LlenarTablaClientes()">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div class="row">
-                                                    <div class="col-md-6">
-                                                        <div class="form-group">
-                                                            <input type="text" class="form-control" id="txtCodigo" placeholder="Código teléfono" hidden>
-                                                            <label for="cboTipoTelefono">Tipo teléfono</label>
-                                                            <select id="cboTipoTelefono" class="form-control select2" style="width: 100%;">
-                                                                <option selected="selected" value="0">Seleccione el tipo de teléfono</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-6">
-                                                        <div class="form-group">
-                                                            <label for="txtNumero">NÚMERO</label>
-                                                            <input type="text" class="form-control" id="txtNumero" placeholder="Número de teléfono">
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-md-3">
-                                                        <div class="form-group">
-                                                            <button id="bntInsertarTel" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('POST', 'Insertar')">INSERTAR</button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <div class="form-group">
-                                                            <button id="btnActualizarTel" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('PUT', 'Actualizar')">ACTUALIZAR</button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <br />
-                                                        <button type="button" id="btnConsultar" class="btn-block btn-lg btn-primary" onclick="Consultar()">CONSULTAR</button>
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <div class="form-group">
-                                                            <button id="btnEliminarTel" class="btn-block btn-lg btn-secondary" onclick="EjecutarComando('DELETE', 'Eliminar')">ELIMINAR</button>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <div class="form-group">
-                                                            <button id="btnCerrarModal" class="btn-block btn-lg btn-secondary" data-dismiss="modal" onclick="LlenarTablaClientes()">CERRAR</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
 
                                 <div class="row">
