feat: agregue la getion de inmuebles

--- a/WebInmobiliaria/Paginas/Cliente/DetalleImagen.html
+++ b/WebInmobiliaria/Paginas/Cliente/DetalleImagen.html
@@ -89,6 +89,7 @@
                     </select>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="txtEmail">EMAIL</label>
@@ -96,8 +97,13 @@
                 </div>
             </div>
 
-
+            <div class="col-md-12 text-start">
+                <div class="form-group">
+                    <button id="btnEnviar" class="btn btn-primary">ENVIAR</button>
+                </div>
+            </div>
         </div>
+        
     </div>
 
     <script src="../../Scripts/jquery-3.4.1.min.js"></script>
