--- a/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
+++ b/WebInmobiliaria/Paginas/Empleado/GestionVisita.html
@@ -26,7 +26,7 @@
                             <h3 class="card-title">ADMINISTRACIÓN DE VISITA</h3>
                         </div>
 
-                        <form id="frmRegistraCliente">
+                        <form id="frmRegistraVisita">
                             <div class="card-body">
                                 <div class="row">
 
